2007-07-18 David A. Mellis <dam@mellis.org>

	* stk500v2.c (stk500v2_getsync): Return if using an AVRISPmkII as
	it might not respond to the sync attempts.

2007-07-18 David A. Mellis <dam@mellis.org>

	* configure.ac (AC_INIT): Changing version to avrdude-5.4-arduino.

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version, releasing avrdude-5.4.

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix AVR910 devcodes.  It seems that the AVR109
	listing refers to "BOOT"-type code, while the standard codes are
	different (usually one below).

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c (avr_read, avr_write): only use the paged_load and
	paged_write backend functions iff the memory area in question has
	a page_size != 0.
	This is supposed to fix bug #19234: avrdude-5.3.1 segfaults when
	stk500v1 tries to program an ATtiny15

2007-05-15 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr910.c: Fall back to avr_{read,write}_byte_default().  Fixes
	bug #18803: Fuse reading regression in avrdude 5.3.1 with avr910
	programmer

2007-05-15 Colin O'Flynn <coflynn@newae.com>

	* avrdude.conf.in: Rename the ATmega164 and ATmega324 into
	ATmega164P and ATmega324P, resp.  Add an entry for the ATmega644P.
	Fixes bug #19769: ATmega164p not recognized

2007-05-15 Joerg Wunsch <j@uriah.heep.sax.de>

	* ser_posix.c (ser_send): Don't select() on the output fd before
	trying to write something to the serial line.  That kind of
	polling isn't very useful anyway, and it seems it breaks for the
	Linux CP210x USB<->RS-232 bridge driver which is certainly a bug
	in the driver, but we can just avoid that bug alltogether.

2007-05-15 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix the STK500v2 ISP delay parameter for
	ATmega640/1280/1281/2560/2561.  Atmel has changed the XML
	files after the initial release.

2007-05-01 Colin O'Flynn <coflynn@newae.com>

	* safemode.c: -Oops - bug in verbose output. Fixed.